--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GUI</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-        <link rel= "stylesheet" type = "text/css" href = "style.css">
+        <link rel= "stylesheet" type = "text/css" href = "css/style.css">
          <style> @import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
       
     </head>
