--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <a href = "#"> Home</a>
                 <a href = "#"> About</a>
-                <a href = "#"> Login</a>
+                <a href = "login.html"> Login</a>
             </nav>
     
         </header>
