--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@ input[type="text"], input[type="password"], input[type="submit"] {
   border-radius: 5px;
   font-family: "Press Start 2P", cursive;
   font-size: 16px;
-  background-color: black;
+  background-color: white;
   color: black;
 }
 
