--- a/login.html
+++ b/login.html
@@ -15,10 +15,12 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password"  required>
 
+
         <input type="submit" value="Submit" >
+        <p><strong>Don't have an account? <a href="signup.html">Sign up</a></strong></p> 
       </form>
     </div>
-    <script src="script.js"></script>
+    
   </body>
 </html>
 
