--- a/login.html
+++ b/login.html
@@ -120,7 +120,8 @@ input[type="submit"]:hover {
     }
   
     if (validLogin) {
-      alert('Login successful!');
+      alert('Login successful! Welcome Back');
+      window.location.href = "index.html";
     } else {
       alert('Invalid login credentials.');
     }
