--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a href = "#" class = "logo"> Pixel Playground</a>
             <nav class ="linkBar">
 
-                <a href = "#"> Home</a>
-                <a href = "#"> About</a>
+                <a href = "index.html"> Home</a>
+                <a href class = "addMore" title = "Having trouble understanding our site? Click Login to begin. New user? You can sign up under the Login button aswell!"> Help </a>
                 <a href = "login.html"> Login</a>
             </nav>
     
