Cleaned up file structure

--- a/runner.html
+++ b/runner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Kandi Runner</title>
-  <link rel="stylesheet" href="runner.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="css/runner.css" type="text/css" media="screen">
   <script type="text/javascript" src="js/jquery.2.1.1.min.js"></script>
 </head>
 <body>
