--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <form id="form">
@@ -37,7 +37,7 @@ body {
   padding: 0;
   background-color: #000;
   font-family: "Press Start 2P", cursive;
-  background-image: url("background2.png");
+  background-image: url("img/background2.png");
 }
 
 .container {
