--- a/snake.html
+++ b/snake.html
@@ -3,7 +3,7 @@
 <head>
   <title>Basic Snake HTML Game</title>
   <meta charset="UTF-8">
-  <link href = "snake.css" rel = "stylesheet">
+  <link href = "css/snake.css" rel = "stylesheet">
 </head>
 <body>
 <canvas width="400" height="400" id="game"></canvas>
