--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <nav class ="linkBar">
 
                 <a href = "index.html"> Home</a>
-                <a href class = "addMore" title = "Having trouble understanding our site? Click Login to begin. New user? You can sign up under the Login button aswell!"> Help </a>
+                <a href  = "help.html"> Help </a>
                 <a href = "login.html"> Login</a>
             </nav>
     
