--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 <!--             <a href = "#" class = "logo"> Pixel Playground</a> -->
             <nav class ="linkBar">
 
-                <a href = "home.html"> Home</a>
-                <a href  = "help.html"> Help </a>
-                <a href = "login.html"> Login</a>
+                <a href = "home.html" title= "Alternate Dimensional Home" > Home</a>
+                <a href  = "help.html" title= "Need assistance? Click here for more help!"> Help </a>
+                <a href = "login.html"title= "Login/Signup for an account with PixelPlayground here!"> Login</a>
             </nav>
     
         </header>
