--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <header class = "header">
         <title>GUI</title>
            <div class = "controls">
-            <a on-click= "lowerMusic();" href="javascript:lowerMusic();"id = "lower"><img src = "img/minus1.png" height = 50px; width = 50px;  ></a>
-            <a on-click= "playMusic();" href="javascript:playMusic();" id = "play"><img src = "img/play.png" height = 50px; width = 50px; ></a>
-            <a on-click= "pauseMusic();" href="javascript:pauseMusic();"id = "pause"><img src = "img/pause.png" height = 50px; width = 50px;  ></a>
-            <a on-click= "higherMusic();" href="javascript:higherMusic();"id = "higher"><img src = "img/plus.png" height = 50px; width = 50px;  ></a>
+            <a on-click= "lowerMusic();" href="javascript:lowerMusic();" title= "Volume Down"id = "lower"><img src = "img/minus1.png" height = 50px; width = 50px;  ></a>
+            <a on-click= "playMusic();" href="javascript:playMusic();" title= "Play"id = "play"><img src = "img/play.png" height = 50px; width = 50px; ></a>
+            <a on-click= "pauseMusic();" href="javascript:pauseMusic();" title= "Pause" id = "pause"><img src = "img/pause.png" height = 50px; width = 50px;  ></a>
+            <a on-click= "higherMusic();" href="javascript:higherMusic();" title= "Volume Up"id = "higher"><img src = "img/plus.png" height = 50px; width = 50px;  ></a>
             </div>
 <!--             <a href = "#" class = "logo"> Pixel Playground</a> -->
             <nav class ="linkBar">
