--- a/tetris.html
+++ b/tetris.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <button id="pause-button"><img width = 70px length = 70px src = "./img/pausebutton.webp" /> </button>
     <canvas width="320" height="640" id="game"></canvas>
     <script type="text/javascript" src="js/tetris.js"></script>
 </body>
