--- a/tetris.html
+++ b/tetris.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
-    <button id="pause-button"><img width = 70px length = 70px src = "./img/pausebutton.webp" /> </button>
-    <canvas width="320" height="640" id="game"></canvas>
-    <script type="text/javascript" src="js/tetris.js"></script>
+    <div class="gameArea">
+        <button id="pause-button"><img width = 70px length = 70px src = "./img/pausebutton.webp" /> </button>
+        <canvas width="320" height="640" id="game"></canvas>
+        <canvas width="200" height="640" id="side"></canvas>
+        <script type="text/javascript" src="js/tetris.js"></script>
+    </div>
 </body>
 
 </html>
