--- a/snake.html
+++ b/snake.html
@@ -6,6 +6,7 @@
   <link href = "css/snake.css" rel = "stylesheet">
 </head>
 <body>
+  <button id="pause-button"><img width = 70px length = 70px src = "./img/pausebutton.webp" /> </button>
 <canvas width="400" height="400" id="game"></canvas>
 <script src = "js/game2.js"></script>
 </body>
