--- a/runner.html
+++ b/runner.html
@@ -7,6 +7,9 @@
   <script type="text/javascript" src="js/jquery.2.1.1.min.js"></script>
 </head>
 <body>
+  <div class = "buttonplace">
+  <button id="pause-button"><img width = 70px length = 70px src = "./img/pausebutton.webp" /> </button>
+ </div>
   <div class="wrapper">
     <div class="sound sound-off"></div>
     <div id="menu">
