--- a/snake.html
+++ b/snake.html
@@ -6,8 +6,11 @@
   <link href = "css/snake.css" rel = "stylesheet">
 </head>
 <body>
-  <button id="pause-button"><img width = 70px length = 70px src = "./img/pausebutton.webp" /> </button>
-<canvas width="400" height="400" id="game"></canvas>
-<script src = "js/game2.js"></script>
+  <div class="gameArea">
+    <button id="pause-button"><img width = 70px length = 70px src = "./img/pausebutton.webp" /> </button>
+    <canvas width="400" height="400" id="game"></canvas>
+    <canvas width="280" height="400" id="side"></canvas>
+    <script type="text/javascript" src = "js/game2.js"></script>
+</div>  
 </body>
 </html>
